--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,6 +1,17 @@
+@charset "UTF-8";
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+
 html,
 body {
     height: 100%;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    line-height: 1.42em;
+    color: #A7A1AE;
+    background-color: #1F2739;
 }
 
 .wrap {
@@ -96,9 +107,146 @@ a.desc:after {
     border: none;
 }
 
-@media(max-width:767px) {
+h1 {
+    font-size: 3em;
+    text-align: center;
+    font-weight: 300;
+    line-height: 1em;
+    color: #4DC3FA;
+}
+
+th {
+    font-size: 1em;
+    font-weight: 300;
+    line-height: 1em;
+    color: #4DC3FA;
+}
+
+h2 {
+    font-size: 1em;
+    font-weight: 300;
+    text-align: center;
+    display: block;
+    line-height: 1em;
+    padding-bottom: 2em;
+    color: #FB667A;
+}
+
+h2 a {
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #FB667A;
+    text-decoration: none;
+}
+
+h3 {
+    font-size: 2em;
+    font-weight: 300;
+    text-align: center;
+    display: block;
+    line-height: 1em;
+    color: #FFF842;
+    margin-top: 50px;
+}
+
+.blue {
+    color: #4DC3FA;
+}
+
+.yellow {
+    color: #FFF842;
+}
+
+.table-container th h1 {
+    font-weight: bold;
+    font-size: 1em;
+    text-align: left;
+    color: #185875;
+}
+
+.table-container td {
+    font-weight: normal;
+    font-size: 1em;
+    -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+    -moz-box-shadow: 0 2px 2px -2px #0E1119;
+    box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+.table-container {
+    text-align: left;
+    overflow: hidden;
+    width: 80%;
+    margin: 0 auto;
+    display: table;
+    padding: 0 0 8em 0;
+}
+
+.table-container td, .table-container th {
+    padding-bottom: 2%;
+    padding-top: 2%;
+    padding-left: 2%;
+}
+
+/* Background-color of the odd rows */
+.table-container tr:nth-child(odd) {
+    background-color: #323C50;
+}
+
+/* Background-color of the even rows */
+.table-container tr:nth-child(even) {
+    background-color: #2C3446;
+}
+
+.table-container th {
+    background-color: #1d2536;
+}
+
+.table-container td:first-child {
+    color: #FB667A;
+}
+
+.table-container tbody tr:hover {
+    background-color: #FFF842;
+    color: #403E10;
+
+    box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
+    transform: translate3d(6px, -6px, 0);
+
+    transition-delay: 0s;
+    transition-duration: 0.4s;
+    transition-property: all;
+    transition-timing-function: linear;
+}
+
+hr {
+    border-width: 1px;
+    border-color: #333c4e;
+}
+
+.error {
+    background-color: #333c4e;
+    margin: 0 auto;
+    width: 50%;
+    -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+    -moz-box-shadow: 0 2px 2px -2px #0E1119;
+    box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+.error p {
+    padding: 15px;
+    color: #FB667A;
+}
+
+@media (max-width: 800px) {
+    .table-container td:nth-child(4),
+    .table-container th:nth-child(4) {
+        display: none;
+    }
+}
+
+@media (max-width: 767px) {
     .nav li > form > button.logout {
-        display:block;
+        display: block;
         text-align: left;
         width: 100%;
         padding: 10px 15px;
