--- a/web/css/site.css
+++ b/web/css/site.css
@@ -243,6 +243,17 @@ hr {
     margin: 0 25%;
 }
 
+.list-group-item {
+    background-color: #323C50;
+    border: 0;
+    border-bottom: 1px solid #9ab9f5;
+    border-top: 1px solid #9ab9f5;
+}
+
+.list-group-item a {
+    color: white;
+}
+
 @media (max-width: 800px) {
     .table-container td:nth-child(4),
     .table-container th:nth-child(4) {
